Backend enviando os arquivos para o front
